--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -13,29 +13,36 @@
 @ifinfo
 This is the ratpoison user manual.
 
-Copyright @copyright{} 2000, 2001, 2002, 2003, 2004 Shawn Betts
+Copyright @copyright{} 2000, 2001, 2002, 2003, 2004, 2005, 2006 Shawn Betts
 
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.2 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
-copy of the license is included in the section entitled "GNU Free
-Documentation License".
+The ratpoison user manual is free documentation; permission is granted to
+copy, distribute and/or modify this document under the terms of either:
 
-@ignore
-Permission is granted to process this file through TeX
-and print the results, provided the printed document
-carries a copying permission notice identical to this
-one except for the removal of this paragraph (this
-paragraph not being relevant to the printed manual).
+a) the GNU General Public License as published by the Free Software
+Foundation; either version 2 of the License, or (at your option)
+any later version, or
 
-@end ignore
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.2 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
-copy of the license is included in the section entitled "GNU Free
-Documentation License".
+b) the GNU Free Documentation License, version 1.2 or any later
+version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+
+The ratpoison manual is distributed in the hope that it will be 
+useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+General Public License or GNU Free Documentation License for more
+details.
+
+A copy of the FDL is included in the section entitled "GNU Free
+Documentation License". 
+You should have received a copy of the GNU General Public License
+along with this software; see the file COPYING. If not, write to
+the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston,
+MA 02110-1301, USA.
+
+If you choose to allow use of your version of this content only under the
+terms of one of the licenses, indicate your decision by deleting the notice
+of the other license. If you do not delete any of those, a recipient may use
+your version of this file unter the terms of either the GNU FDL or the GNU GPL.
 @end ifinfo
 
 @titlepage
@@ -45,20 +52,29 @@ Documentation License".
 
 @page
 @vskip 0pt plus 1filll
-Copyright @copyright{} 2000, 2001, 2002, 2003, 2004 Shawn Betts
+Copyright @copyright{} 2000, 2001, 2002, 2003, 2004, 2005, 2006 Shawn Betts
 
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.2 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
-copy of the license is included in the section entitled "GNU Free
-Documentation License".
+The ratpoison user manual is free documentation; permission is granted to
+copy, distribute and/or modify this document under the terms of either:
+
+a) the GNU General Public License as published by the Free Software
+Foundation; either version 2 of the License, or (at your option)
+any later version, or
+
+b) the GNU Free Documentation License, version 1.2 or any later
+version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 @end titlepage
 
+The ratpoison manual is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+General Public License or GNU Free Documentation License for more
+details.
 @node Top, GNU Free Documentation License, (dir), (dir)
 
 @ifinfo
-This document explains how to use ratpoison.
+This document explains how to use ratpoison 1.4.1.
 @end ifinfo
 
 @menu
