--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-23  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/bar.c (prepare_bar): cap the width and height to the size of
+	the screen.
+
 2006-05-23  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (spawn): pass cmd twice to execcl
