--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-03  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/main.c (strtok_ws): remove useless debug ouput.
+
 2006-09-26  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (initialize_default_keybindings): bind "swap" to C-t x and C-t C-x
