--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-11-17  Shawn Betts  <sabetts@vcn.bc.ca>
 
+	* src/bar.c (bar_y): take into account screen padding
+	(bar_x): likewise
+
 	* src/split.c (show_frame_indicator): use defaults.frame_fmt
 	(show_frame_message): format frame_fmt string with format_string
 
