--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-18  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/split.c (show_frame_message): handle the case when the frame
+	is empty.
+
 2006-11-17  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/bar.c (bar_y): take into account screen padding
