--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,272 @@
+ratpoison (1.4.1~CVS) UNRELEASED; urgency=low
+
+  * re-add doc-base file listing info document.
+  * update brl-menu.diff to current cvs.
+  * drop build-dependency to texinfo
+
+ -- Bernhard R. Link <brlink@debian.org>  Tue, 21 Nov 2006 12:36:00 +0100
+
+ratpoison (1.4.1~CVS20061026-1) experimental; urgency=low
+
+  * experimental cvs snapshot
+  - incorporates most of the previous patches
+  - has some further fontset support needing testing
+
+ -- Bernhard R. Link <brlink@debian.org>  Sun, 29 Oct 2006 14:14:18 +0100
+
+ratpoison (1.4.0.dfsg-7) unstable; urgency=medium
+
+  * call dh_installinfo, so that info files get indexed at installation 
+    (Closes: 384910)
+
+ -- Bernhard R. Link <brlink@debian.org>  Sat, 28 Oct 2006 21:55:35 +0200
+
+ratpoison (1.4.0.dfsg-6) unstable; urgency=low
+
+  * fix bug in remove{left,up,right,down} which could corrupt the
+    frame data.
+  * document max width support in format string (Closes: 382299)
+  * do not ignore exitcode of make distclean
+  * give configure a --disable-dependency-tracking on normal compile
+  * install python bindings using python-support if installed
+    (Copied from dh_pysupport to avoid build-depending on python).
+
+ -- Bernhard R. Link <brlink@debian.org>  Sun,  3 Sep 2006 16:07:15 +0200
+
+ratpoison (1.4.0.dfsg-5) unstable; urgency=low
+
+  * add avoidupdates.diff to not update window name window
+    on property events not changing anything.
+    Thanks to Chris  Lesniewski-Laas for this.
+    (Closes: 375157)
+  * add dontprolong.diff to not reset the timer when updateing
+    window names window. (Makes the bug even more impossible to happen again)
+  * remove windows_loop_workaround.diff (superseded by the two before)
+
+ -- Bernhard R. Link <brlink@debian.org>  Sun, 16 Jul 2006 21:58:46 +0200
+
+ratpoison (1.4.0.dfsg-4) unstable; urgency=low
+
+  * fix mention of 1.4.1 in info document
+  * do not restart bar window when windows command is issued
+    while the window is still active. (Works around: #375157)
+  * patch doc/Makefile to not generate dir.gz files
+
+ -- Bernhard R. Link <brlink@debian.org>  Mon, 26 Jun 2006 10:56:35 +0200
+
+ratpoison (1.4.0.dfsg-3) unstable; urgency=low
+
+  * add info page from current cvs (minus the two commands not in this version)
+  * downgrade depedency on 9menu to recommends (Closes: 368548)
+    dropping x-w-m priority to 20 because of that
+  * remove x-w-m alternative on deconfigure,
+    readd on abort-remove and abort-deconfigure  (Closes: 374474)
+  * add example to manpage how to use -c (Closes: 369612)
+
+ -- Bernhard R. Link <brlink@debian.org>  Thu, 22 Jun 2006 15:00:58 +0200
+
+ratpoison (1.4.0.dfsg-2) unstable; urgency=low
+
+  * include ratpoison-cmd.el forgotten in the first try (Closes: 368317)
+  * make emacsen-install script less sensitive
+  * add debian/patches/avoid-segfault.diff working around segfault with
+    remote commands
+
+ -- Bernhard R. Link <brlink@debian.org>  Sun, 21 May 2006 15:48:12 +0200
+
+ratpoison (1.4.0.dfsg-1) unstable; urgency=low
+
+  * new maintainer (Closes: 368067)
+  * new upstream version (Closes: 364488)
+  - fixes the tmpwm freeze (Closes: 357905)
+  * removed the info page from the upstream tarball
+    (GFDL and does not include the license as mandated by the license)
+  * repackaged from scratch
+  - change description (and include a Homepage:)
+  - use 9menu to provide menus
+  - install the bindings for emacs-lisp, perl, python and ruby
+  - add a watch file
+  - no longer ship a .desktop file as already registered in the Debian menu
+  * add debian/patches/net_wm_pid.diff to work around problems of qt programs
+  * add debian/patches/from-cvs-hook.diff from cvs to fix the hook command.
+  * add debian/patches/from-cvs-raise.diff from cvs to fix raise notifiers.
+  * add debian/patches/brl-enlarge.diff adding remove{left,right,up,down}
+  * add debian/patches/brl-xchange.diff adding exchange{left,right,up,down}
+  * add debian/patches/brl-menu.diff advertising the menu
+    (configure changes in debian/patches/brl-menu.reconf)
+
+ -- Bernhard R. Link <brlink@debian.org>  Sat, 20 May 2006 17:18:22 +0200
+
+ratpoison (1.4.0-beta4-10) unstable; urgency=low
+
+  * Added Suggests: for xclip, a very cool program
+
+ -- Jonathan Walther <krooger@debian.org>  Sun, 12 Mar 2006 18:10:52 -0700
+
+ratpoison (1.4.0-beta4-9) unstable; urgency=low
+
+  * Fixed typo in package description.  Thank you Dan Jacobson.
+  * Added a versioned debhelper build-depends.  Thank you lintian.
+
+ -- Jonathan Walther <krooger@debian.org>  Tue, 28 Feb 2006 13:31:52 -0700
+
+ratpoison (1.4.0-beta4-8) unstable; urgency=low
+
+  * Fixed installation of gdm/kdm support, as per Martin Samuelsson's
+    suggestions.
+    Closes: #348036
+
+ -- Jonathan Walther <krooger@debian.org>  Sat, 14 Jan 2006 19:31:52 -0700
+
+ratpoison (1.4.0-beta4-7) unstable; urgency=low
+
+  * Added Martin Samuelsson's addhook patch to fix a crashing bug.
+    Closes: #347023
+
+ -- Jonathan Walther <krooger@debian.org>  Thu, 12 Jan 2006 12:21:52 -0700
+
+ratpoison (1.4.0-beta4-6) unstable; urgency=low
+
+  * Added dpatch as a Build-Depends to make buildd work.
+  * Fixed typo in debian/rules that prevented building.
+
+ -- Jonathan Walther <krooger@debian.org>  Tue, 10 Jan 2006 14:54:52 -0700
+
+ratpoison (1.4.0-beta4-5) unstable; urgency=low
+
+  * Added Martin Samuelsson's numbering bug patch.
+  * Added dpatch support to the package to manage any future
+    patches.
+
+ -- Jonathan Walther <krooger@debian.org>  Mon,  9 Jan 2006 16:28:52 -0700
+
+ratpoison (1.4.0-beta4-4) unstable; urgency=low
+
+  * Added libxtst-dev Build-Depends to fix buildd breakage.
+
+ -- Jonathan Walther <krooger@debian.org>  Mon,  9 Jan 2006 10:46:52 -0700
+
+ratpoison (1.4.0-beta4-3) unstable; urgency=low
+
+  * Adding Mike O'Connor's suggested Build-Depends.
+    Closes: #347023
+
+ -- Jonathan Walther <krooger@debian.org>  Mon,  9 Jan 2006 10:20:52 -0700
+
+ratpoison (1.4.0-beta4-2) unstable; urgency=low
+
+  * Use most current config.guess and config.sub files, as explained in
+    /usr/share/doc/autotools-dev/README.Debian.gz
+    Closes: #347183
+
+ -- Jonathan Walther <krooger@debian.org>  Mon,  9 Jan 2006 01:16:52 -0700
+
+ratpoison (1.4.0-beta4-1) unstable; urgency=low
+
+  * Updating to most recent upstream, which includes X.org fixes.
+    Closes: #327196
+  * Adding more scripting examples.
+    Closes: #343883
+
+ -- Jonathan Walther <krooger@debian.org>  Sun,  8 Jan 2006 19:03:52 -0700
+
+ratpoison (1.3.0-8) unstable; urgency=low
+
+  * xlibs-dev depend no longer valid.  See the following message.
+    http://lists.debian.org/debian-devel-announce/2005/11/msg00022.html
+    Closes: #347023
+
+ -- Jonathan Walther <krooger@debian.org>  Sun,  8 Jan 2006 18:38:52 -0700
+
+ratpoison (1.3.0-7) unstable; urgency=low
+
+  * Applied Luca Capello's patch for GDM support.  Closes: #307779
+
+ -- Jonathan Walther <krooger@debian.org>  Thu,  5 May 2005 16:46:52 -0700
+
+ratpoison (1.3.0-6) unstable; urgency=low
+
+  * Applied Mike O'Connor's fix for tmpwm race.  Closes: #305955
+
+ -- Jonathan Walther <krooger@debian.org>  Sat, 23 Apr 2005 00:15:52 -0700
+
+ratpoison (1.3.0-5) unstable; urgency=low
+
+  * Fixed missing '=' in menu file.  Closes: #294466
+
+ -- Jonathan Walther <krooger@debian.org>  Wed,  9 Feb 2005 13:44:52 -0700
+
+ratpoison (1.3.0-4) unstable; urgency=low
+
+  * Fixed lintian warning about no DEBHELPER symbol in {pre,post}{rm,inst}
+  * Removed ChangeLog from docs file, since dh_installchangelogs is now used.
+  * Silenced other lintian warnings.
+
+ -- Jonathan Walther <krooger@debian.org>  Wed,  2 Feb 2005 14:15:12 -0700
+
+ratpoison (1.3.0-3) unstable; urgency=low
+
+  * Fixed lintian bitching about upstream changelogs
+
+ -- Jonathan Walther <krooger@debian.org>  Tue,  1 Feb 2005 19:40:36 -0700
+
+ratpoison (1.3.0-2) unstable; urgency=low
+
+  * Copied twm's alternative handling.  Closes: #293221
+
+ -- Jonathan Walther <krooger@debian.org>  Tue,  1 Feb 2005 18:36:52 -0700
+
+ratpoison (1.3.0-1) unstable; urgency=low
+
+  * Add a Build-Depends for autotools and use latest config.sub and
+    config.guess.  Allows compilation on amd64 platforms. Thank you for the
+    patch, Andreas.  Closes: #293172
+  * Created orig.tar.gz, because this isn't a native package.
+
+ -- Jonathan Walther <krooger@debian.org>  Tue,  1 Feb 2005 09:05:18 -0700
+
+ratpoison (1.3.0) unstable; urgency=low
+
+  * New upstream version.  Closes: #257098
+  * Removed build-depends on automaken.  Thank you Mike. Closes: #289743
+  * Fixed manpage installation.  Thank you Shyamal and Jari.
+    Closes: #267475, #292578
+  * Frameset management is in this version.  Closes: #208427
+  * Bumped Standards-Version to 3.6.1.1
+
+ -- Jonathan Walther <krooger@debian.org>  Mon, 31 Jan 2005 00:17:16 -0700
+
+ratpoison (1.2.1) unstable; urgency=low
+
+  * Removed version in Build-depends for automake (Closes: #166283)
+  * Now suggests xbindkeys instead of keylaunch
+  * Defaults to x-terminal-emulator instead of xterm (Closes: #196343)
+  * Changed the doc-base section to WindowManagers (Closes: #186244)
+  * Made this package from tarball, not CVS (Closes: #169662)
+
+ -- Jonathan Walther <krooger@debian.org>  Sun,  8 Jun 2003 12:20:37 -0700
+
+ratpoison (1.2.0.cvs.20020425-3) unstable; urgency=low
+
+  * Added Build-Depends for automake (Closes: #149500)
+
+ -- Jonathan Walther <krooger@debian.org>  Sun,  9 Jun 2002 22:32:41 -0700
+
+ratpoison (1.2.0.cvs.20020425-2) unstable; urgency=low
+
+  * Changed Maintainer field; Gergely has gotten busy with Real Life
+  * Updated build dependancies
+  * Cleaned up the rules file a bit
+
+ -- Jonathan Walther <krooger@debian.org>  Sat,  8 Jun 2002 12:25:33 -0700
+
+ratpoison (1.2.0.cvs.20020425) unstable; urgency=low
+
+  * CVS snapshot of release candidate 1.2.0
+  * Many bugfixes better described in the ChangeLog
+
+ -- Jonathan Walther <krooger@debian.org>  Wed,  5 Jun 2002 22:21:24 -0700
+
 ratpoison (1.0.0.cvs.20020117-1) unstable; urgency=low
 
   * CVS snapshot release on 2002-01-17:
