*** empty log message ***

--- a/FAQ
+++ b/FAQ
@@ -1,117 +1,3 @@
--*- outline -*-
-Ratpoison Frequently Asked Questions
+Find the FAQ on the ratpoison wiki:
 
-Copyright (C) 2000, 2001, 2002, 2003, 2004 Shawn Betts
-
-Copying and distribution of this file, with or without modification,
-are permitted in any medium without royalty provided the copyright
-notice and this notice are preserved.
-
-* Conceptual Questions
-** Where does the name `ratpoison' come from?
-
-** Where are the window decorations?
-
-** So, what is wrong with the mouse?
-
-** Why can't I move the windows around?
-There's no point.
-
-* Usability & Customization Questions
-** Hey where's the manual?
-There is a ratpoison texinfo manual. type:
-
-info ratpoison
-
-or if you use emacs, type:
-
-C-h i m ratpoison RET
-
-** How do I use the gimp (or similar apps) under ratpoison?
-Some programs fit more into the ratpoison paradigm than others.
-Unfortunatly, the gimp can be difficult to use under ratpoison.  There
-are however, several options if you must use it.
-
-1) manually split and adjust frames to accomodate the various gimp
-   windows.
-
-2) use some scripts to automate the kinds of things you will have to
-   do in (1) (some users have published these on the mailing list,
-   search the archives).
-
-3) use the (still experimental) tmpwm command to temporarily switch to
-   another window manager.  Be sure to exit that window manager when
-   you are finished with the gimp to return to ratpoison.
-
-4) fix the gimp to work better with ratpoison.
-
-** How do I bind a command to a single keystroke?
-Pressing C-t is too much work for you, eh? There are plenty of 3rd
-party programs that you can look into. xbindkeys seems to be a good
-choice. Use ratpoison's -c command-line argument to send a command to
-ratpoison.
-
-** What about workspaces?
-Windows can be divided into different groups. Each group of windows
-has a number and optionally a name. With a bit of glue code, you can
-create workspaces.
-
-I've created just the glue you need. look at contrib/rpws for details.
-
-** Can I save and restore frame configurations?
-Yes you can! Look at fdump and frestore.
-
-** How do I get rid of that 1 pixel border around some of the windows?
-Put this line in your .ratpoisonrc file:
-
-defborder 0
-
-** I want feature XYZ
-What you want is probably already in Emacs. If you don't use Emacs,
-start. If do use Emacs, use it more. If you *still* can't do what you
-want to do, you probably shouldn't do it.
-
-If you're stubborn enough to keep trying, patch ratpoison and post the
-patch on the mailing list. Don't forget to read the README.developers
-file.
-
-** Xinerama doesn't work well with ratpoison.
-If you have 2 monitors that have different dimensions, then problems
-can arise. You've probably noticed ratpoison disregards the dead space
-on your setup. To get around this you can use the 'frestore' command
-to fool ratpoison into avoiding the dead space.
-
-Say you have one monitor at 640x480 and another one at 1024x768. The
-smaller monitor occupies 0-639 horizontally and 0 480 vertically. the
-bigger one occupies 640-1663 horizontally and 0-768 vertically.
-
-+----------+--------------+
-|	   |		  |
-|	   |		  |
-|  640x480 |	1024x768  |
-|	   |		  |
-|	   |		  |
-|	   |		  |
-+----------+		  |
-|	   |		  |
-|dead space|		  |
-+----------+--------------+
-
-In your .ratpoisonrc, add this line:
-
-frestore 0 0 0 640 480 0 0,1 640 0 1024 768 0 0
-
-Now you have 2 frames one occupying the first monitor and 1 occupying
-the second one. The problem arises when you run the command 'only'
-(bound to C-t Q), which removes all the frames and creates one big
-one. Then your nice frames will disappear. You can rebind C-t Q to the
-above command:
-
-bind Q frestore 0 0 0 640 480 0 0,1 640 0 1024 768 0 0
-
-You'll notice the only problem with this is that the frames won't have
-any windows in them. Writing a script to extract the current window
-and place it in one of the frames is an exercise left to the user.
-
-Note: I don't use Xinerama and haven't verified that this works. But
-I'm confident that it would.
+http://ratpoison.elektrubadur.se/cgi-bin/wiki/How_do_I...
