*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,11 @@
-Shawn Betts (sabetts@users.sourceforge.net)
+Shawn Betts (sabetts at vcn bc ca)
 
 Shawn is the original author and current maintainer for
 ratpoison. Sickened by the rat and the trend in window managers, he
 sat down one evening and pulled an all-nighter writing the first
 version of ratpoison.
 
-Ryan Yeske (rcyeske@vcn.bc.ca)
+Ryan Yeske (rcyeske at vcn bc ca)
 
 Ryan doesn't commit much code these days, but that's not because he
 doesn't want to, its just that he forgot his cvs ssh password.
@@ -39,3 +39,4 @@ Antti Nykänen <aon at iki dot fi>
 rubikitch <rubikitch at ruby-lang org>
 Florian E.J. Fruth <fejf at rommel stw uni-erlangen de>
 Tim Cooijmans <tim at aapopfiets nl>
+Andreas Seltenreich  <uwi7 at rz uni-karlsruhe de>
