--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-19  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* src/manage.c (force_maximize): remove call to usleep
+
 2006-12-13  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>
 
 	* src/bar.c (show_bar, prepare_bar): Switch to default colormap.
