update 'debian/'-files to new upload

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
-ratpoison (1.4.1~CVS) UNRELEASED; urgency=low
+ratpoison (1.4.2~CVS-0) UNRELEASED; urgency=low
 
+ -- Bernhard R. Link <brlink@debian.org>  Tue, 20 Dec 2006 20:23:00 +0100
+
+ratpoison (1.4.1-1) experimental; urgency=low
+
+  * new upstream version
   * re-add doc-base file listing info document.
   * update brl-menu.diff to current cvs.
-  * drop build-dependency to texinfo
+  * drop texinfo build-dependency, update x-dev dependency
 
- -- Bernhard R. Link <brlink@debian.org>  Tue, 21 Nov 2006 12:36:00 +0100
+ -- Bernhard R. Link <brlink@debian.org>  Tue, 20 Dec 2006 20:23:00 +0100
 
 ratpoison (1.4.1~CVS20061026-1) experimental; urgency=low
 
