--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-31  Bernhard R. Link  <brlink@debian.org>
+
+	* src/frame.c (frame_read): fix bug to never set dedicated
+
 2006-12-19  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* Release 1.4.1
