--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -739,6 +739,11 @@ Default is 1.
 Determine the width of the input window.
 .br
 Default is 200.
+.var barinpadding \fB0 | \fB1
+If there is padding, determines whether the bar appears at the edge of the
+screen (\fB1\fP) or at the edge of the window area (\fB0\fP).
+.br
+Default is 0.
 .var topkmap kmap
 Make \fIkmap\fP the top keymap ratpoison graps directly.
 The default value is \fBtop\fP.
