(update_modifier_map): don't map both super and hyper to the same modifier slot.

--- a/AUTHORS
+++ b/AUTHORS
@@ -40,3 +40,4 @@ rubikitch <rubikitch at ruby-lang org>
 Florian E.J. Fruth <fejf at rommel stw uni-erlangen de>
 Tim Cooijmans <tim at aapopfiets nl>
 Andreas Seltenreich  <uwi7 at rz uni-karlsruhe de>
+Steve Folta <steve at folta net>
