--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-05-07  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* src/main.c (init_defaults): only load the backup font when the
+	default font fails.
+
+2007-05-04  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/main.c (init_defaults): if the default font fails, use the
+	backup font.
+
+	* src/conf.h (BACKUP_FONT): new define
+
 2007-04-23  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/input.c (update_modifier_map): don't map both super and
